[gd_scene load_steps=6 format=3 uid="uid://b01a4v1wpical"]

[ext_resource type="Theme" uid="uid://d27dsxdcf0ldf" path="res://Card_theme.tres" id="1_bwwo2"]
[ext_resource type="Script" uid="uid://brrouckk3qyg7" path="res://Scenes/treasury.gd" id="2_bwwo2"]
[ext_resource type="Texture2D" uid="uid://ciebc3foa7c7g" path="res://Assets/PNG-cards-1.3/ace_of_diamonds.png" id="3_bwwo2"]
[ext_resource type="Theme" uid="uid://twfci1goorii" path="res://Assets/Text theme.tres" id="4_0hcoq"]
[ext_resource type="Theme" uid="uid://bs82185dtcax6" path="res://Assets/Button theme.tres" id="5_wp0gv"]

[node name="Treasury" type="Button" groups=["cards"]]
offset_right = 100.0
offset_bottom = 130.0
theme = ExtResource("1_bwwo2")
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
script = ExtResource("2_bwwo2")

[node name="Card_texture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("3_bwwo2")
expand_mode = 1

[node name="Discription_Box" type="Panel" parent="."]
z_index = 3
layout_mode = 0
offset_left = 104.0
offset_right = 387.0
offset_bottom = 131.0

[node name="Name" type="Label" parent="Discription_Box"]
layout_mode = 0
offset_top = 3.0
offset_right = 283.0
offset_bottom = 26.0
theme = ExtResource("4_0hcoq")
theme_override_colors/font_color = Color(0.831373, 0.686275, 0.215686, 1)
text = "Treasury of Babylon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Discription" type="Label" parent="Discription_Box"]
layout_mode = 0
offset_top = 15.0
offset_right = 283.0
offset_bottom = 117.0
theme = ExtResource("4_0hcoq")
theme_override_font_sizes/font_size = 14
text = "Gain Score equal to money currently held. This score is added at the end of every roll. 10% Chance of losing half money every roll (rounds down)."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Buy_btn" type="Button" parent="Discription_Box"]
layout_mode = 0
offset_left = -97.0
offset_top = 96.0
offset_right = -15.0
offset_bottom = 128.0
scale = Vector2(1.00552, 0.98905)
theme = ExtResource("5_wp0gv")
text = "BUY"

[node name="currently" type="Label" parent="Discription_Box"]
layout_mode = 0
offset_left = -1.0
offset_top = 107.0
offset_right = 283.0
offset_bottom = 130.0
theme = ExtResource("4_0hcoq")
theme_override_colors/font_color = Color(1, 1, 1, 0.635294)
text = "Currently: +0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sell_btn" type="Button" parent="Discription_Box"]
visible = false
layout_mode = 0
offset_left = -97.0
offset_top = 96.0
offset_right = -15.0
offset_bottom = 128.0
scale = Vector2(1.00552, 0.98905)
theme = ExtResource("5_wp0gv")
text = "SELL
"

[node name="Panel" type="Panel" parent="."]
z_index = 4
layout_mode = 0
offset_top = 134.0
offset_right = 101.0
offset_bottom = 174.0

[node name="Effect" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 101.0
offset_bottom = 40.0
theme = ExtResource("4_0hcoq")
theme_override_colors/font_color = Color(0.758161, 0.723075, 0, 1)
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="Discription_Box/Buy_btn" to="." method="_on_buy_btn_pressed"]
[connection signal="pressed" from="Discription_Box/sell_btn" to="." method="_on_sell_btn_pressed"]
